<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fund"
            type="com.example.desafioorama.models.FundInformation" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_card_height"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/green_orama"
            app:cardCornerRadius="@dimen/card_spacing"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_internal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_spacing"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/category_fund"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@={fund.specification.fundMacroStrategy.name}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/subtitle_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subcategory_fund"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/category_fund"
                        android:text="@={fund.specification.fundMainStrategy.name}" />

                    <TextView
                        android:id="@+id/fund_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@={fund.simpleName}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/subtitle_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/subcategory_fund" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/card_fund_profit"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_name" />

                    <TextView
                        android:id="@+id/fund_profitability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:text="XX%"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/fund_name" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/card_fund_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/date_fund"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:text="xx/xx/xx"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/fund_profitability" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/card_fund_min"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/min_application"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@={fund.operability.minimumInitialApplicationAmount}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/date_fund" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/card_fund_days"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <TextView
                        android:id="@+id/days_retrieval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:text="@={fund.operability.retrievalQuotationDaysStr}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toEndOf="@+id/textView12"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
